tests/baselines/reference/typeOfThisInStaticMembers3(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
typeOfThisInStaticMembers3.ts(9,22): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== typeOfThisInStaticMembers3.ts (1 errors) ====
    class C {
        static a = 1;
        static b = this.a + 1;
    }
    
    class D extends C {
        static c = 2;
        static d = this.c + 1;
        static e = super.a + this.c + 1;
                         ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
    }
    